Por fin!, ja! Costo pero logrado. Al crear el token, no incluida el ROL en la consuccion con claims. Entonces en postriores request el rol siempre daba ROL_ANONYMUS. Corrgido eso pude authnticar en securityconfig sin preobelmas